fix: header & text align, buttons too

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -21,17 +21,19 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
+  padding: 16px;
 }
 
 .modal_content {
   display: flex;
   flex-direction: column;
-  padding-left: 50px;
+  padding-left: 5px;
 }
 
 .header {
   display: flex;
   align-items: center;
+  gap: 16px;
 }
 
 .title {
@@ -46,10 +48,10 @@ body {
   gap: 10px;
 }
 
-/* .text {
-  margin-left: 60px;
-  margin-bottom: 5px;
-} */
+.text,
+.buttons {
+  margin-left: 58px;
+}
 
 .icon {
   color: royalblue;
@@ -63,18 +65,6 @@ body {
   align-items: center;
   justify-content: center;
   /* The spacing around the icon needs adjustment to ensure equal gaps on both sides */
-  margin: 10px;
-}
-
-/* .buttons {
-  display: flex;
-  margin-left: 60px;
-  padding-bottom: 15px;
-  gap: 5px;
-} */
-
-.buttons button {
-  flex-shrink: 0;
 }
 
 .close-button {
@@ -91,6 +81,7 @@ body {
   border: 1px solid #eee;
   padding: 0;
   /* consider using flexbox properties to push it to the right */
+  margin-left: auto;
 }
 
 button {
